--- a/css/mobile-styles.css
+++ b/css/mobile-styles.css
@@ -40,17 +40,6 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
 .modal_window {
     background: #FFFFFF;
     border-radius: 4px;
@@ -525,7 +514,6 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 
 .last-review__clinic-count-reviews {
     font-size: 35px;
-    margin: 0 0 30px 240px;
 }
 
 .last-review__clinic-top {
@@ -548,10 +536,6 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     font-weight: 500;
     font-size: 38px;
     color: #000000;
-}
-
-.last-review__clinic-geo {
-    margin-left: 50px;
 }
 
 .last-review__clinic-address {
@@ -635,10 +619,6 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     font-weight: 500;
     font-size: 38px;
     color: #000000;
-}
-
-.last-review__doctor-name-spec {
-    margin-left: 40px;
 }
 
 .last-review__doctor-name {
@@ -908,10 +888,301 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 
 
 
+.clinic-card__text-block {
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 33px;
+    margin-bottom: 50px;
+}
+
+.clinic-card__service-item {
+    list-style-type: none;
+    margin-bottom: 40px;
+}
 
 
+.clinic-card__service-popular {
+    display: flex;
+    border-bottom: #e8e8e8 2px solid;
+    justify-content: space-between;
+    font-size: 35px;
+}
+
+.clinic-card__service-popular a {
+    margin-top: 45px;
+}
 
 
+.pagination_listing {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    list-style-type: none;
+}
+
+.pagination_item {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 30px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #BCBCBC;
+    margin: 0 25px
+}
+
+.pagination_link {
+    text-decoration-line: none;
+    color: #BCBCBC;
+}
+
+.pagination_link-back {
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: #BCBCBC;
+    text-decoration-line: none;
+}
+
+.pagination_link-active {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 22px;
+    line-height: 22px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #185BC3;
+    text-decoration-line: none;
+}
+
+.review_on_doctor {
+    font-size: 33px;
+    margin-bottom: 9px;
+}
 
 
+.attention-for-patient {
+    border: 1px solid #FF6472;
+    border-radius: 4px;
+    width: auto;
+    height: auto;
+    margin-bottom: 25px;
+}
 
+.attention-container {
+    padding: 30px 70px;
+}
+
+.attention-for-view {
+    font-size: 35px;
+    color: #FF6472;
+    margin-bottom: 20px;
+}
+
+.attention-for-view img {
+    width: 40px;
+    margin-right: 30px;
+}
+
+.attention-info {
+    font-size: 35px;
+    color: rgba(0, 0, 0, 0.7);
+}
+
+
+.doctors-card {
+    margin: 50px 0 150px;
+}
+
+.doctor-card__head {
+    text-align: center;
+}
+
+.doctor-card__container {
+    display: flex;
+}
+
+.doctor-card__clinic-reviews {
+    font-size: 40px;
+    text-decoration-line: none;
+    color: rgba(0, 0, 0, 0.7);
+}
+
+.doctor-card__clinic-items {
+    padding: 10px;
+}
+
+.clinic-review img {
+    width: 30px;
+}
+
+.doctor-card__doctor-name {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 40px;
+    color: #000000;
+}
+
+.photo-doctor {
+    margin-right: 25px;
+}
+
+.photo-doctor img {
+    width: 300px;
+    margin-bottom: 40px;
+}
+
+.doctor-card__doctor-category {
+    color: rgba(0, 0, 0, 0.6);
+    font-size: 30px;
+}
+
+.reviews-count {
+    font-size: 30px;
+}
+
+.doctor-card__doctor-spec {
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 30px;
+}
+
+.doctor-card__doctor-experience {
+    color: #FF6472;
+    font-size: 30px;
+}
+
+.doctor-card__clinics_active {
+    width: 832px;
+    height: 330px;
+    background: rgba(255, 240, 75, 0.15);
+    border-radius: 4px;
+    font-size: 30px;
+    padding: 40px;
+    margin-bottom: 30px;
+}
+
+.doctor_clinic-name {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 37px;
+}
+
+.doctor_clinic-name img {
+    width: 30px;
+    height: 20px;
+}
+
+.doctor_clinic-items {
+    padding: 20px;
+}
+
+.doctor-card__clinic-metro-further {
+    color: rgba(0, 0, 0, 0.5);
+}
+
+.doctor-card__clinic-schedule {
+    color: rgba(0, 0, 0, 0.5);
+}
+
+.clinic-schedule {
+    color: rgba(0, 0, 0, 0.5);
+}
+
+.doctor-card__doctor-date {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    background: rgba(217, 217, 217, 0.15);
+    border-radius: 4px;
+    width: 832px;
+    height: 58px;
+    font-size: 40px;
+    margin-bottom: 50px;
+    padding: 0 30px;
+}
+
+.doctor-card__doctor-date img {
+    width: 20px;
+    height: 20px;
+}
+
+.doctor-card__clinic-active {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    background: rgba(217, 217, 217, 0.15);
+    border-radius: 4px;
+    width: 832px;
+    height: 58px;
+    font-size: 40px;
+    margin-bottom: 50px;
+    padding: 0 30px;
+}
+
+.doctor-card__clinic-free-time {
+    display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    margin-bottom: 25px;
+}
+
+.free-time {
+    width: 255px;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #FFF04B;
+    border-radius: 4px;
+    font-size: 35px;
+    margin: 10px;
+}
+
+.doctor-card__clinic-phone {
+    text-align: center;
+    font-size: 35px;
+    font-weight: 600;
+    color: rgba(0, 0, 0, 0.7);
+    margin-bottom: 50px;
+}
+
+.doctor-card__doctor-clinics {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    background: rgba(217, 217, 217, 0.15);
+    border-radius: 4px;
+    width: 832px;
+    height: 58px;
+    font-size: 40px;
+    margin-bottom: 50px;
+}
+
+.doctor-clinics span {
+    font-size: 40px;
+}
+
+.doctor-card-button {
+    display: flex;
+    justify-content: center;
+}
+
+.doctor-card__button-mobile {
+    display: flex;
+    justify-content: center;
+}
+
+
+.last-review__count-reviews {
+    font-size: 35px;
+}
