--- a/css/styles.css
+++ b/css/styles.css
@@ -21,8 +21,8 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 }
 
 body {
-   /* background: #e5ebe0 !important;*/
-    background:  #F7F9FA !important;
+    background: #699a40 !important;
+    /*background:  #F7F9FA !important;*/
 }
 
 .head__container .wrap {
@@ -764,33 +764,692 @@ body {
     align-items: center;
 }
 
+.category__container h5 {
+    color: #000;
+    text-align: center;
+    font-size: 20px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
 
+.category__container {
+    border-radius: 13px;
+    background: #FFF;
+    padding: 15px 40px;
+}
 
+.category__sort ul li {
+    list-style-type: none;
+}
 
+.category__sort {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 15px 0;
+}
 
+.category__sort ul {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    align-items: center;
+    justify-content: flex-start;
+}
 
+.category__body span {
+    color: rgba(0, 0, 0, 0.30);
+    font-size: 12px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
 
+.category__items {
+    height: 200px;
+    /* width: 100%; */
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    text-align: center;
+    justify-content: space-between;
+    padding: 20px;
+    align-content: center;
+    align-items: flex-start;
+}
 
+.category__item {
+    padding: 10px 45px;
+    border-top: 1px solid #0000001A;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+    flex-wrap: wrap;
+    width: 300px;
+}
 
+.category__filter {
+    color: #000;
+    font-size: 17px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
 
+.category__filter-item a {
+    color: #516FA6;
+    text-align: center;
+    font-size: 16px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    text-decoration-line: underline;
+    padding: 0 10px;
+}
 
+.category__item a {
+    color: #516FA6;
+    font-size: 14px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-decoration-line: underline;
+}
 
+.category__item span {
+    color: #000;
+    font-size: 14px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
 
+.clinic-card {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 0;
+    border-radius: 13px;
+    background: #FFF;
+    box-shadow: 1px 5px 15px -8px rgba(0, 0, 0, 0.25);
+    margin: 15px 0;
+    align-items: stretch;
+    flex-direction: row;
+}
 
+.clinic-card__left {
+    text-align: center;
+    width: 400px;
+}
 
+.clinic-card__center {
+    max-width: 600px;
+    padding-right: 20px;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    align-content: flex-start;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
 
+.clinic-card__right {
+    width: 350px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    align-items: flex-start;
+    justify-content: space-around;
+}
 
+.clinic-card__star {
+    border-radius: 10px;
+    background: rgba(81, 111, 166, 0.80);
+    width: 55px;
+    height: 23px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 4px 2px;
+    margin-right: 10px;
+}
 
+.clinic-card__star p {
+    margin: 0;
+    color: #FFF;
+    font-size: 12px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
 
+.clinic-card__reviews {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 15px 0;
+}
 
+.clinic-card__reviews a {
+    color: #728AB6;
+    font-size: 14px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
 
+.clinic-card__name a {
+    color: #000;
+    font-size: 26px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-decoration-line: none;
+}
 
+.clinic-card__type {
+    color: #000;
+    font-size: 18px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
 
+.clinic-card__address {
+    color: rgba(0, 0, 0, 0.70);
+    font-size: 16px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
 
+.clinic-card__text-block {
+    color: rgba(0, 0, 0, 0.70);
+    font-size: 14px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
 
+.clinic-card__doctors a {
+    color: rgba(0, 0, 0, 0.50);
+    font-size: 16px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
 
+.clinic-card__clinic-schedule {
+    color: rgba(0, 0, 0, 0.70);
+    font-size: 16px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
 
+.clinic-card__metro-near {
+    color: rgba(0, 0, 0, 0.70);
+    font-size: 16px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
 
+.clinic-card__metro-far {
+    color: rgba(0, 0, 0, 0.70);
+    font-size: 14px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.clinic-card__phone {
+    color: #000;
+    font-size: 16px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.clinic-card__popular-procedure {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 15px 0;
+}
+
+.clinic-card__popular-procedure-price {
+    color: #000;
+    font-size: 14px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    border-top: 1px solid #0000001A;
+    padding: 10px 0;
+}
+
+.clinic-card__popular-procedure-price p {
+    color: #000;
+    font-size: 14px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    margin: 0 10px;
+}
+
+.clinic-card__popular-procedure-price span {
+    color: #FC5B5D;
+    font-size: 14px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    margin: 0 10px;
+    text-decoration: line-through;
+}
+
+.text-banner {
+    display: flex;
+    position: relative;
+    flex-direction: row;
+    justify-content: space-between;
+    align-content: center;
+    flex-wrap: wrap;
+    border-radius: 13px;
+    background: #EBECEE;
+    box-shadow: 1px 5px 15px -8px rgba(0, 0, 0, 0.25);
+}
+
+.text-banner__text-block {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-between;
+    position: relative;
+}
+
+.popular-questions {
+    border-radius: 13px;
+    background: #FFF;
+    margin: 15px 0;
+}
+
+.popular-questions h5 {
+    color: #000;
+    font-size: 20px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    padding: 15px 0;
+    text-align: center;
+}
+
+.first-questions {
+
+}
+
+.first-questions p, .second-questions p, .third-questions p {
+    color: #000;
+    font-size: 17px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    padding: 10px 50px;
+    background: rgba(253, 124, 125, 0.10);
+    line-height: normal;
+    margin: 10px 0;
+}
+
+.first-questions span {
+    color: #000;
+    font-size: 14px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.second-questions {
+
+}
+
+.third-questions {
+    padding-bottom: 5px;
+}
+
+.info-about-project {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 20px;
+}
+
+.info-about-project__left {
+    color: rgba(0, 0, 0, 0.70);
+    font-size: 14px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    max-width: 600px;
+    width: 100%;
+}
+
+.info-about-project__right {
+    border-radius: 15px;
+    border: 1px solid #516FA6;
+    background: #FFF;
+    color: rgba(0, 0, 0, 0.70);
+    font-size: 14px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    padding: 10px 25px;
+    width: 380px;
+    height: 130px;
+}
+
+.info-about-project__right p span {
+    color: #516FA6;
+    font-size: 14px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.info-about-project__right p {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+
+.info-about-project__right img {
+    margin-right: 15px;
+}
+
+.info-about-project__right span {
+    color: rgba(0, 0, 0, 0.70);
+    font-size: 14px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.review-card {
+    border-radius: 4px;
+    background: #FFF;
+    box-shadow: 1px 5px 15px -8px rgba(0, 0, 0, 0.25);
+    padding: 17px 30px;
+    width: 100%;
+}
+
+.review-card h5 {
+    color: rgba(0, 0, 0, 0.80);
+    font-size: 20px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-align: center;
+}
+
+.review-card__container {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    align-items: flex-start;
+    border-bottom: 1px solid #00000019;
+}
+
+.review-card__left {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    align-items: flex-start;
+    justify-content: space-between;
+    max-width: 240px;
+    width: 100%;
+    padding-right: 20px;
+}
+
+.review-card__name-patient {
+    color: #000;
+    font-size: 18px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    display: flex;
+    padding: 10px 0;
+    width: 90%;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.review-card__mark {
+    border-radius: 4px;
+    background: rgba(102, 189, 122, 0.70);
+    width: 54px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 4px 2px;
+    margin: 0;
+}
+
+.review-card__date {
+    color: rgba(0, 0, 0, 0.70);
+    font-size: 14px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    padding: 10px 0;
+}
+
+.review-card__shield {
+    color: rgba(81, 111, 166, 0.80);
+    font-size: 12px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-decoration-line: underline;
+    padding: 10px 0;
+}
+
+.review-card__shield img {
+    margin-right: 10px;
+}
+
+.review-card__source-review {
+    color: rgba(0, 0, 0, 0.70);
+    font-size: 14px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 400;
+    padding: 10px 0;
+    line-height: normal;
+}
+
+.review-card__date-visit {
+    color: rgba(0, 0, 0, 0.70);
+    font-size: 14px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    padding: 10px 0;
+}
+
+.review-card__center {
+    display: flex;
+    max-width: 600px;
+    padding-right: 20px;
+    width: 50%;
+}
+
+.review-card__comment {
+    color: #000;
+    font-size: 14px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.review-card__comment p {
+    color: rgba(0, 0, 0, 0.70);
+    font-size: 14px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-top: 20px;
+}
+
+.review-card__right {
+    display: flex;
+}
+
+.review-card__photo-clinic {
+    color: #000;
+    font-size: 18px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 85.9%;
+}
+
+.review-card__photo-clinic img {
+
+}
+
+.relinks {
+    margin: 15px 0;
+}
+
+.relinks__column {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.relinks__body {
+    border-radius: 4px;
+    background: #FFF;
+    box-shadow: 1px 5px 15px -8px rgba(0, 0, 0, 0.25);
+    display: flex;
+    gap: 48px;
+    padding: 47px 48px;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.relinks__column ul li {
+    list-style-type: none;
+}
+
+.relinks__column ul {
+    margin: 0;
+    padding: 0;
+}
+
+.relinks__item a {
+    color: #516FA6;
+    font-size: 14px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-decoration-line: underline;
+    padding: 10px 0;
+}
+
+.more__text {
+    color: rgba(0, 0, 0, 0.50);
+    font-size: 14px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    text-decoration-line: underline;
+}
+
+.breadcrumbs a {
+    color: #000;
+    font-size: 20px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin: 10px 5px;
+}
+
+.breadcrumbs p {
+    color: rgba(0, 0, 0, 0.50);
+    font-size: 15px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin: 10px 5px;
+}
+
+.breadcrumbs {
+    border-radius: 4px;
+    background: #FFF;
+    padding: 5px 30px;
+}
 
 
 @media (max-width: 1200px) {
@@ -808,80 +1467,18 @@ body {
         justify-content: center;
     }
 
-    .actions__bot{
+    .actions__bot {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
     }
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+@media (max-width: 1100px) {
+    .category__items {
+        height: auto;
+    }
+}
 
 
 .footer-wrap {
