--- a/css/mobile-styles.css
+++ b/css/mobile-styles.css
@@ -21,8 +21,8 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 }
 
 body {
-    background: #e5ebe0 !important;
-    /* background:  #F7F9FA !important;*/
+    /*background: #e5ebe0 !important;*/
+     background:  #F7F9FA !important;
     overflow-x: hidden;
 }
 
